# levilauncher-android-mod-template

./: AmbientTools.h  CMakeLists.txt  README.md  cursor.h  cursor_render.cpp  gamepwnage.cmake  main.cpp  stub.h
.github/workflows/: build.yml
ImGui/: imgui_demo.cpp
gamepwnage/includes/: config.h
scripts/: package.ps1
src/: config_generator.cpp  config_tests.cpp  main.cpp  zaphkiel_bridge.h
src/mod/: Config.cpp  MyMod.cpp  MyMod.h
